Reduce carousel pagination dots margin to move them up and prevent cutoff

--- a/react-site/src/components/Carousel.css
+++ b/react-site/src/components/Carousel.css
@@ -77,7 +77,7 @@
   display: flex;
   width: 100%;
   justify-content: center;
-  margin-top: 16px;
+  margin-top: 8px;
 }
 
 .carousel-indicators-container.round {
